--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
       - run:
           name: test-run
           command: npm run test
+            - ./node_modules  
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
